<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Activity Information -->
    <string name="app_name" translatable="false">Alexandria</string>
    <string name="action_settings">Settings</string>

    <!-- Menu Items -->
    <string name="books">List of Books</string>
    <string name="scan">Scan/Add a Book</string>
    <string name="about">About this App</string>
    <string name="navigation_drawer_open" >Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Scan/Add -->
    <string name="scan_button">Scan</string>
    <string name="input_hint">Insert ISBN-13. Digits only.</string>
    <string name="book_cover">Book Cover</string>
    <string name="not_found">No Book found</string>
    <string name="not_online">Device Offline - Book cannot be added</string>
    <string name="ok_button">Next</string>
    <string name="cancel_button">Cancel</string>

    <!-- Book List -->
    <string name="search">Search</string>
    <string name="delete">Delete Book</string>
    <string name="action_share">Share</string>
    <string name="back_button">Go Back</string>
    <string name="scanner">Scanner</string>
    <string name="share_text">A must read book: </string>

    <!-- Settings -->
    <string name="pref_startScreen">Select StartScreen</string>
    <string name="title_activity_settings">Settings</string>

    <!-- System -->
    <string name="content_authority" translatable="false">it.jaschke.alexandria</string>

    <!-- Miscellaneous -->
    <string name="about_text">This application gets book information from a Google API. All titles, cover images, and author information come from there.
    The original version of this app was built by Sascha Jaschke, and a modified version is given to students in the Udacity Android Nanodegree program. </string>
</resources>