<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|top"
    tools:context="it.jaschke.alexandria.AddBook" >

    <LinearLayout
        android:id="@+id/eancontainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/ean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/null_pad"
            android:paddingStart="@dimen/null_pad"
            android:paddingRight="@dimen/ean_pad"
            android:paddingEnd="@dimen/ean_pad"
            android:inputType="number"
            android:minEms="@integer/ean_width"
            android:saveEnabled="true"
            android:maxLength="@integer/ean_size"
            android:maxLines="1"
            android:hint="@string/input_hint" />

        <Button
            android:id="@+id/scan_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_button" />
    </LinearLayout>
    <TextView
        android:id="@+id/bookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/eancontainer"
        android:layout_alignLeft="@+id/eancontainer"
        android:layout_alignStart="@+id/eancontainer"
        android:paddingLeft="@dimen/null_pad"
        android:paddingStart="@dimen/null_pad"
        android:paddingRight="@dimen/book_title_pad"
        android:paddingEnd="@dimen/book_title_pad"
        android:textSize="@dimen/head_line"
        android:textIsSelectable="true"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/bookSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/bookTitle"
        android:layout_alignLeft="@+id/eancontainer"
        android:layout_alignStart="@+id/eancontainer"
        android:maxLines="3"
        android:ellipsize="end" />

    <TextView
        android:id="@+id/authors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/bookSubTitle"
        android:layout_alignRight="@+id/eancontainer"
        android:layout_alignEnd="@+id/eancontainer"
        android:gravity="end"
        android:textSize="@dimen/small_fontsize" />

    <ImageView
        android:id="@+id/bookCover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/authors"
        android:layout_alignLeft="@+id/eancontainer"
        android:layout_alignStart="@+id/eancontainer"
        android:contentDescription="@string/book_cover" />

    <TextView
        android:id="@+id/categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bookCover"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/eancontainer"
        android:layout_alignStart="@+id/eancontainer"
        android:textSize="@dimen/small_fontsize" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/cancel_button"
            android:drawableLeft="@drawable/ic_action_discard"
            android:drawableStart="@drawable/ic_action_discard"
            android:visibility="invisible"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/ok_button"
            android:drawableLeft="@drawable/ic_action_accept"
            android:drawableStart="@drawable/ic_action_accept"
            android:visibility="invisible"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</RelativeLayout>